Update: Changed API calls to APIM

--- a/RAG-SQLDB-Resumes/RAG_with_Resumes.ipynb
+++ b/RAG-SQLDB-Resumes/RAG_with_Resumes.ipynb
@@ -35,12 +35,12 @@
         "### Prerequisites\n",
         "\n",
         "1. Azure Subscription\n",
-        "2. 리소스: Azure Document Intelligence, Azure SQL Database, Azure OpenAI, Azure API Management\n",
-        "3. 각 리소스의 API 정보로 업데이트한 .env 파일\n",
-        "4. Python: 본 튜토리얼은 3.10.11 버전으로 테스트됐습니다.\n",
+        "2. Azure Resources: Azure Document Intelligence, Azure SQL Database, Azure OpenAI (Chat Completion Model, Embedding Model), Azure API Management\n",
+        "3. .env: 아래의 셀을 실행해 작성할 수 있습니다.\n",
+        "4. Python: 본 튜토리얼은 3.10.11 버전으로 테스트 됐습니다.\n",
         "5. Jupyter Notebook: 본 튜토리얼은 Azure Machine Learning Studio의 Notebook (Python 3.10 - SDK v2) 환경에서 작성 및 테스트됐습니다.\n",
         "\n",
-        "**Azure 리소스 생성, 배포, .env 업데이트에 대한 튜토리얼이 필요하다면 [Microsoft Korea 테크블로그 (TBU)] (link_tbu)를 참고해주세요.**\n"
+        "**구체적인 튜토리얼: [Microsoft Korea 테크블로그 (TBU)] (link_tbu)**\n"
       ],
       "metadata": {
         "nteract": {
@@ -49,6 +49,32 @@
           }
         }
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile .env\n",
+        "\n",
+        "APIM_URL = \"\"\n",
+        "APIM_SUBSCRIPTION_KEY = \"\"\n",
+        "APIM_API_VERSION = \"\"\n",
+        "APIM_CHAT_DEPLOYMENT_NAME = \"\"\n",
+        "APIM_EMBEDDING_DEPLOYMENT_NAME = \"\"\n",
+        "\n",
+        "AZUREDOCINTELLIGENCE_ENDPOINT = \"\"\n",
+        "AZUREDOCINTELLIGENCE_API_KEY = \"\"\n",
+        "\n",
+        "# Use only one of the below. The one you are not using should be commented out.\n",
+        "\n",
+        "# For Entra ID Service Principle Authentication\n",
+        "ENTRA_CONNECTION_STRING= \"\"\n",
+        "\n",
+        "# For SQL Authentication\n",
+        "SQL_CONNECTION_STRING=Driver=\"\""
+      ],
+      "outputs": [],
+      "execution_count": null,
+      "metadata": {}
     },
     {
       "cell_type": "markdown",
@@ -149,7 +175,7 @@
       "source": [
         "apim_url = os.getenv(\"APIM_URL\")\n",
         "deployment_name = os.getenv(\"APIM_CHAT_DEPLOYMENT_NAME\")\n",
-        "api_version = os.getenv(\"APIM_CHAT_DEPLOYMENT_VERSION\")\n",
+        "api_version = os.getenv(\"APIM_API_VERSION\")\n",
         "subscription_key = os.getenv(\"APIM_SUBSCRIPTION_KEY\")\n",
         "\n",
         "# Construct the URL and headers\n",
@@ -197,7 +223,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Create 100 resumes as sample data\n",
+        "# Create n resumes as sample data\n",
         "\n",
         "n_resumes = 100\n",
         "\n",
@@ -218,7 +244,7 @@
         "    result = response.json()['choices'][0]['message']['content']\n",
         "\n",
         "    # Save result as PDF\n",
-        "    pdf_file = f'resumes/resume_{i}.pdf'\n",
+        "    pdf_file = f'{folder_resumes_dir}/resume_{i}.pdf'\n",
         "    # Create a PDF file\n",
         "    doc = SimpleDocTemplate(pdf_file, pagesize=letter,\n",
         "                      rightMargin=20, leftMargin=20,\n",
@@ -263,8 +289,12 @@
     {
       "cell_type": "code",
       "source": [
-        "# Path to the directory containing PDF files - UPDATE IF NEEDED\n",
-        "folder_resumes_dir = 'resumes'"
+        "import os\n",
+        "import re\n",
+        "import tiktoken\n",
+        "import pandas as pd\n",
+        "from azure.core.credentials import AzureKeyCredential\n",
+        "from azure.ai.formrecognizer import DocumentAnalysisClient"
       ],
       "outputs": [],
       "execution_count": null,
@@ -273,11 +303,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import os\n",
-        "import re\n",
-        "from azure.ai.formrecognizer import DocumentAnalysisClient\n",
-        "from azure.core.credentials import AzureKeyCredential\n",
-        "\n",
         "# Load environment variables\n",
         "endpoint = os.getenv(\"AZUREDOCINTELLIGENCE_ENDPOINT\")\n",
         "api_key = os.getenv(\"AZUREDOCINTELLIGENCE_API_KEY\")\n",
@@ -301,16 +326,10 @@
     {
       "cell_type": "code",
       "source": [
-        "import os\n",
-        "import re\n",
-        "import pandas as pd\n",
-        "import tiktoken\n",
+        "# folder_resumes_dir: Path to the directory containing PDF files, set earlier\n",
         "\n",
-        "# Path to the directory containing PDF files\n",
-        "folder_path = folder_resumes_dir\n",
-        "\n",
-        "def get_pdf_files(folder_path):\n",
-        "    for path, subdirs, files in os.walk(folder_path):\n",
+        "def get_pdf_files(folder_resumes_dir):\n",
+        "    for path, subdirs, files in os.walk(folder_resumes_dir):\n",
         "        for name in files:\n",
         "            if (name.endswith(\".pdf\")):\n",
         "                yield os.path.join(path, name)\n",
@@ -346,7 +365,7 @@
         "    return chunks\n",
         "\n",
         "# Count the number of PDF files in the directory\n",
-        "pdf_files = [f for f in get_pdf_files(folder_path)]\n",
+        "pdf_files = [f for f in get_pdf_files(folder_resumes_dir)]\n",
         "num_files = len(pdf_files)\n",
         "print(f\"Number of PDF files in the directory: {num_files}\\n\")\n",
         "\n",
@@ -464,20 +483,41 @@
       "cell_type": "code",
       "source": [
         "import os\n",
+        "import re\n",
         "import requests\n",
         "from num2words import num2words\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "import json\n",
-        "from openai import AzureOpenAI\n",
+        "from openai import AzureOpenAI"
+      ],
+      "outputs": [],
+      "execution_count": null,
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "apim_url = os.getenv(\"APIM_URL\")\n",
+        "deployment_name = os.getenv(\"APIM_EMBEDDING_DEPLOYMENT_NAME\")\n",
+        "api_version = os.getenv(\"APIM_API_VERSION\")\n",
+        "subscription_key = os.getenv(\"APIM_SUBSCRIPTION_KEY\")\n",
         "\n",
-        "# Specify your model name\n",
-        "openai_embedding_model = os.getenv(\"AZOPENAI_EMBEDDING_MODEL_DEPLOYMENT_NAME\")\n",
+        "# Construct the URL and headers\n",
         "\n",
-        "# Assuming openai_url and openai_key are your environment variables\n",
-        "openai_url = os.getenv(\"AZOPENAI_ENDPOINT\") + \"openai/deployments/\" + openai_embedding_model + \"/embeddings?api-version=2023-05-15\"\n",
-        "openai_key = os.getenv(\"AZOPENAI_API_KEY\")\n",
-        "\n",
+        "embedding_url = f\"{apim_url}/deployments/{deployment_name}/embeddings?api-version={api_version}\"\n",
+        "headers = {\n",
+        "    \"Content-Type\": \"application/json\",\n",
+        "    \"Ocp-Apim-Subscription-Key\": subscription_key\n",
+        "}"
+      ],
+      "outputs": [],
+      "execution_count": null,
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "def get_embedding(text):\n",
         "    \"\"\"\n",
         "    Get sentence embedding using the Azure OpenAI text-embedding-small model.\n",
@@ -488,10 +528,9 @@
         "    Returns:\n",
         "        list: A list containing the embedding.\n",
         "    \"\"\"\n",
-        "    response = requests.post(openai_url,\n",
-        "        headers={\"api-key\": openai_key, \"Content-Type\": \"application/json\"},\n",
-        "        json={\"input\": [text]}  # Embed the extracted chunk\n",
-        "    )\n",
+        "\n",
+        "    response = requests.post(embedding_url, headers=headers, json={\"input\": [text]})\n",
+        "    # Embed the extracted chunk as text\n",
         "    \n",
         "    if response.status_code == 200:\n",
         "        response_json = response.json()\n",
@@ -583,15 +622,21 @@
     {
       "cell_type": "code",
       "source": [
-        "#lets define a function to connect to SQLDB\n",
         "import os\n",
-        "from dotenv import load_dotenv\n",
         "import pyodbc\n",
         "import struct\n",
-        "from azure.identity import DefaultAzureCredential\n",
-        "\n",
-        "# Load environment variables from .env file\n",
-        "load_dotenv()\n",
+        "import pandas as pd\n",
+        "from prettytable import PrettyTable\n",
+        "from azure.identity import DefaultAzureCredential"
+      ],
+      "outputs": [],
+      "execution_count": null,
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#lets define a function to connect to SQLDB\n",
         "\n",
         "def get_mssql_connection():\n",
         "    # Retrieve the connection string from the environment variables\n",
@@ -628,19 +673,6 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [
-        "conn = get_mssql_connection()"
-      ],
-      "outputs": [],
-      "execution_count": 24,
-      "metadata": {
-        "gather": {
-          "logged": 1738738160334
-        }
-      }
-    },
-    {
       "attachments": {},
       "cell_type": "markdown",
       "source": [
@@ -654,9 +686,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import pyodbc\n",
-        "import pandas as pd\n",
-        "\n",
         "# Retrieve the connection string from the function get_mssql_connection()\n",
         "conn = get_mssql_connection()\n",
         "\n",
@@ -664,7 +693,6 @@
         "    print(f\"Success: {conn}\")\n",
         "except:\n",
         "    print(\"Failed sql connection.\")\n",
-        "\n",
         "\n",
         "\n",
         "# Create a cursor object\n",
@@ -759,14 +787,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from prettytable import PrettyTable\n",
-        "\n",
-        "import pyodbc\n",
-        "import pandas as pd\n",
-        "\n",
-        "# Load environment variables from .env file\n",
-        "load_dotenv()\n",
-        "\n",
         "# Retrieve the connection string from the environment variables\n",
         "conn = get_mssql_connection()\n",
         "\n",
@@ -929,10 +949,15 @@
         "headers = {\n",
         "    \"Content-Type\": \"application/json\",\n",
         "    \"Ocp-Apim-Subscription-Key\": subscription_key\n",
-        "}\n",
-        "\n",
-        "\n",
-        "\n",
+        "}"
+      ],
+      "outputs": [],
+      "execution_count": null,
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "def generate_completion(search_results, user_input):\n",
         "    system_prompt = '''\n",
         "    You are an intelligent & funny assistant who will exclusively answer based on the data provided in the `search_results`:\n",
@@ -992,6 +1017,7 @@
         "# The model will then provide a response based on the data stored in the SQL DB.\n",
         "# Type 'end' to end the session.\n",
         "#\n",
+        "\n",
         "print(\"*** What Role are you hiring for? And What skills are you looking for? Ask me & I can help you find a candidate :) Type 'end' to end the session.\\n\")\n",
         "\n",
         "while True:\n",
