Update: Add descriptions to APIM test

--- a/RAG-SQLDB-Resumes/APIM_Test.ipynb
+++ b/RAG-SQLDB-Resumes/APIM_Test.ipynb
@@ -3,6 +3,29 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# APIM을 이용한 로드 밸런싱\n",
+        "\n",
+        "Azure의 PAAS형 리소스를 배포하면 해당 리소스를 호출해 사용할 수 있는 엔드포인트가 생성됩니다. 이때 각 리소스의 사용 쿼타(Quota)는 한정돼있으므로, 엔드포인트를 그 이상으로 호출한다면 Error Code 429가 리턴될 것입니다.\n",
+        "\n",
+        "예를 들어 Azure OpenAI는 Region별로 TPM(Tokens Per Minute)이 정해져있기 때문에, Azure OpenAI 엔드포인트를 짧은 시간 내 반복적으로 호출한다면 429가 리턴되며 원하는 답변을 얻지 못할 가능성이 존재합니다.\n",
+        "\n",
+        "APIM은 이러한 상황에 대한 해결책이 될 수 있습니다. 미리 여러 Region에 동일한 deployment name과 model type의 Azure OpenAI 리소스를 배포해두고, APIM에 해당 백엔드 엔드포인트를 등록해 Inbound Policy로 Failover / Load Balancing을 수행할 수 있습니다.\n",
+        "\n",
+        "본 노트북으로 APIM을 테스트할 수 있습니다.\n",
+        "\n",
+        "Azure OpenAI, APIM 배포에 대한 가이드는 [Microsoft Korea 테크블로그 (TBU)](link_TBU)에서 확인할 수 있습니다."
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### Prerequisite\n",
         "\n",
         "**Ensure you have an .env file containing:**\n",
@@ -17,7 +40,9 @@
         "\n",
         "APIM_API_VERSION = \"\"\n",
         "\n",
-        "**You can run the cell below if needed.**"
+        "*\n",
+        "\n",
+        "아래의 셀을 실행해 .env 파일을 생성할 수 있습니다."
       ],
       "metadata": {
         "nteract": {
@@ -34,9 +59,9 @@
         "\n",
         "APIM_URL = \"\"\n",
         "APIM_SUBSCRIPTION_KEY = \"\"\n",
-        "APIM_API_VERSION = \"\"\n",
         "APIM_CHAT_DEPLOYMENT_NAME = \"\"\n",
-        "APIM_EMBEDDING_DEPLOYMENT_NAME = \"\""
+        "APIM_EMBEDDING_DEPLOYMENT_NAME = \"\"\n",
+        "APIM_API_VERSION = \"\""
       ],
       "outputs": [],
       "execution_count": null,
@@ -80,6 +105,19 @@
       "metadata": {
         "gather": {
           "logged": 1739001279598
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Single Call (Test Connection)"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
         }
       }
     },
@@ -149,46 +187,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Test Failover: EMBEDDING\n",
-        "\n",
-        "input_text = \"Hello, World!\"\n",
-        "\n",
-        "total_calls = 30\n",
-        "failure = 0\n",
-        "failure_reasons = {}\n",
-        "\n",
-        "for i in range(total_calls):\n",
-        "    response = requests.post(embedding_url, headers=headers, json={\"input\": input_text})\n",
-        "    if response.status_code == 200:\n",
-        "        embedding = response.json().get(\"data\", [])[0].get(\"embedding\", [])[0]\n",
-        "        print(f\"[{i+1}/{total_calls}] Status {response.status_code}: {embedding} ...\")\n",
-        "    else:\n",
-        "        failure += 1\n",
-        "        failure_reasons.update({response.status_code: i})   # Keep track of different failure http code returned\n",
-        "        print(f\"[{i+1}/{total_calls}] Status {response.status_code}: Failed to get embedding\")\n",
-        "        \n",
-        "\n",
-        "print(f\"\\n{(total_calls-failure)} succeeded out of {total_calls} calls\")\n",
-        "if failure > 0:\n",
-        "    print(f\"\\n{failure} failure with response {', '.join(map(str, failure_reasons.keys()))}\")"
-      ],
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": "[1/30] Status 200: -0.0026247576 ...\n[2/30] Status 200: -0.0026247576 ...\n[3/30] Status 200: -0.0026247576 ...\n[4/30] Status 200: -0.0026247576 ...\n[5/30] Status 200: -0.0026247576 ...\n[6/30] Status 200: -0.0026247576 ...\n[7/30] Status 200: -0.0026431093 ...\n[8/30] Status 200: -0.0026247576 ...\n[9/30] Status 200: -0.0026431093 ...\n[10/30] Status 200: -0.0026247576 ...\n[11/30] Status 200: -0.0026431093 ...\n[12/30] Status 200: -0.0026431093 ...\n[13/30] Status 200: -0.0026247576 ...\n[14/30] Status 200: -0.0026247576 ...\n[15/30] Status 200: -0.0026431093 ...\n[16/30] Status 200: -0.0026247576 ...\n[17/30] Status 200: -0.0026247576 ...\n[18/30] Status 200: -0.0026247576 ...\n[19/30] Status 200: -0.0026431093 ...\n[20/30] Status 200: -0.0026247576 ...\n[21/30] Status 200: -0.0026431093 ...\n[22/30] Status 200: -0.0026247576 ...\n[23/30] Status 200: -0.0026247576 ...\n[24/30] Status 200: -0.0026431093 ...\n[25/30] Status 200: -0.0026247576 ...\n[26/30] Status 200: -0.0026247576 ...\n[27/30] Status 200: -0.0026247576 ...\n[28/30] Status 200: -0.0026247576 ...\n[29/30] Status 200: -0.0026247576 ...\n[30/30] Status 200: -0.0026247576 ...\n\n30 succeeded out of 30 calls\n"
-        }
-      ],
-      "execution_count": 6,
-      "metadata": {
-        "gather": {
-          "logged": 1739001317452
-        }
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "# Test Connection: CHAT\n",
         "\n",
         "# Sample input text\n",
@@ -225,6 +223,59 @@
       "metadata": {
         "gather": {
           "logged": 1739001421077
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Multiple Calls (Test Failover)"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Test Failover: EMBEDDING\n",
+        "\n",
+        "input_text = \"Hello, World!\"\n",
+        "\n",
+        "total_calls = 30\n",
+        "failure = 0\n",
+        "failure_reasons = {}\n",
+        "\n",
+        "for i in range(total_calls):\n",
+        "    response = requests.post(embedding_url, headers=headers, json={\"input\": input_text})\n",
+        "    if response.status_code == 200:\n",
+        "        embedding = response.json().get(\"data\", [])[0].get(\"embedding\", [])[0]\n",
+        "        print(f\"[{i+1}/{total_calls}] Status {response.status_code}: {embedding} ...\")\n",
+        "    else:\n",
+        "        failure += 1\n",
+        "        failure_reasons.update({response.status_code: i})   # Keep track of different failure http code returned\n",
+        "        print(f\"[{i+1}/{total_calls}] Status {response.status_code}: Failed to get embedding\")\n",
+        "        \n",
+        "\n",
+        "print(f\"\\n{(total_calls-failure)} succeeded out of {total_calls} calls\")\n",
+        "if failure > 0:\n",
+        "    print(f\"\\n{failure} failure with response {', '.join(map(str, failure_reasons.keys()))}\")"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": "[1/30] Status 200: -0.0026247576 ...\n[2/30] Status 200: -0.0026247576 ...\n[3/30] Status 200: -0.0026247576 ...\n[4/30] Status 200: -0.0026247576 ...\n[5/30] Status 200: -0.0026247576 ...\n[6/30] Status 200: -0.0026247576 ...\n[7/30] Status 200: -0.0026431093 ...\n[8/30] Status 200: -0.0026247576 ...\n[9/30] Status 200: -0.0026431093 ...\n[10/30] Status 200: -0.0026247576 ...\n[11/30] Status 200: -0.0026431093 ...\n[12/30] Status 200: -0.0026431093 ...\n[13/30] Status 200: -0.0026247576 ...\n[14/30] Status 200: -0.0026247576 ...\n[15/30] Status 200: -0.0026431093 ...\n[16/30] Status 200: -0.0026247576 ...\n[17/30] Status 200: -0.0026247576 ...\n[18/30] Status 200: -0.0026247576 ...\n[19/30] Status 200: -0.0026431093 ...\n[20/30] Status 200: -0.0026247576 ...\n[21/30] Status 200: -0.0026431093 ...\n[22/30] Status 200: -0.0026247576 ...\n[23/30] Status 200: -0.0026247576 ...\n[24/30] Status 200: -0.0026431093 ...\n[25/30] Status 200: -0.0026247576 ...\n[26/30] Status 200: -0.0026247576 ...\n[27/30] Status 200: -0.0026247576 ...\n[28/30] Status 200: -0.0026247576 ...\n[29/30] Status 200: -0.0026247576 ...\n[30/30] Status 200: -0.0026247576 ...\n\n30 succeeded out of 30 calls\n"
+        }
+      ],
+      "execution_count": 6,
+      "metadata": {
+        "gather": {
+          "logged": 1739001317452
         }
       }
     },
@@ -271,6 +322,45 @@
       "metadata": {
         "gather": {
           "logged": 1739001460499
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Check Log"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "APIM 리소스의 Logs 항목에서 구체적인 로그를 확인할 수 있습니다.\n",
+        "\n",
+        "다음 KQL 쿼리를 실행해 BackendUrl의 내용을 확인해보면, 실제로 엔드포인트가 바뀌는 것을 확인할 수 있습니다.\n",
+        "\n",
+        "```\n",
+        "ApiManagementGatewayLogs\n",
+        "| project TimeGenerated, BackendResponseCode, BackendUrl, BackendTime\n",
+        "| order by TimeGenerated desc\n",
+        "| top 60 by TimeGenerated\n",
+        "```\n",
+        "\n",
+        "백엔드 1에서 429(Too Many Requests)가 발생한다면, APIM이 백엔드 2로 retry를 해 200(Success)을 리턴받게 되는 것입니다.\n",
+        "\n",
+        "*apim_log.png 참고*"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
         }
       }
     }
