Update: Descriptions for env

--- a/RAG-SQLDB-Resumes/RAG_with_Resumes.ipynb
+++ b/RAG-SQLDB-Resumes/RAG_with_Resumes.ipynb
@@ -66,11 +66,11 @@
         "\n",
         "# Use only one of the below. The one you are not using should be commented out.\n",
         "\n",
-        "# For Entra ID Service Principle Authentication\n",
+        "# For Entra ID Service Principle Authentication: Paste Connection String {ODBC (Includes Node.js) (Microsoft Entra password authentication)} and change 18 to 17\n",
         "ENTRA_CONNECTION_STRING= \"\"\n",
         "\n",
-        "# For SQL Authentication\n",
-        "SQL_CONNECTION_STRING=Driver=\"\""
+        "# For SQL Authentication: Paste Connection String {ODBC (Includes Node.js) (SQL authentication)} and change Dirver 18 to 17\n",
+        "SQL_CONNECTION_STRING= \"\""
       ],
       "outputs": [],
       "execution_count": null,
