--- a/RAG-SQLDB-Resumes/APIM_Test.ipynb
+++ b/RAG-SQLDB-Resumes/APIM_Test.ipynb
@@ -354,7 +354,7 @@
         "\n",
         "백엔드 1에서 429(Too Many Requests)가 발생한다면, APIM이 백엔드 2로 retry를 해 200(Success)을 리턴받게 되는 것입니다.\n",
         "\n",
-        "*[apim_log.png 참고](https://github.com/suzyvaque/microsoft-azure-tutorials/blob/main/RAG-SQLDB-Resumes/apim_log.png)*"
+        "[!APIM Log](https://github.com/suzyvaque/microsoft-azure-tutorials/blob/main/RAG-SQLDB-Resumes/apim_log.png "APIM Log")"
       ],
       "metadata": {
         "nteract": {
