Minor fixes to description

--- a/RAG_Evaluation_Test/rag_eval.ipynb
+++ b/RAG_Evaluation_Test/rag_eval.ipynb
@@ -1401,7 +1401,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Evaluate"
+    "### Prepare json\n",
+    "\n",
+    "Add previous repsonses to json file.\n",
+    "\n",
+    "Responses will be compared to ground truth."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Evaluate"
    ]
   },
   {
@@ -1469,13 +1480,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Trouble shooting\n",
+    "### 2. Upload data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Troubleshooting for Auth\n",
     "\n",
     "* secrets reader (AI Hub > VM): does not have authorization to perform action 'Microsoft.MachineLearningServices/workspaces/datastores/read' over scope '/subscriptions/{vm id}/resourceGroups/AZ-FoundryRAG-RG-suzy/providers/Microsoft.MachineLearningServices/workspaces/AZ-AIProject-Sweden-suzy/datastores/workspaceblobstore\n",
     "\n",
     "* AzureML Data Scientist (AI Project > VM): does not have authorization to perform action 'Microsoft.MachineLearningServices/workspaces/data/versions/write'\n",
     "\n",
-    "* "
+    "etc..."
    ]
   },
   {
@@ -1487,13 +1505,6 @@
     "# # Upload data for evaluation\n",
     "data_id, _ = project_client.upload_file(\"data/evaluate_test_data.jsonl\")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
