--- a/RAG_Evaluation_Test/rag_eval.ipynb
+++ b/RAG_Evaluation_Test/rag_eval.ipynb
@@ -1480,7 +1480,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Upload data"
+    "### Upload data"
    ]
   },
   {
