--- a/AIFoundry/AIFoundry-Workshop/2-notebooks/3-quality_attributes/1-Observability.ipynb
+++ b/AIFoundry/AIFoundry-Workshop/2-notebooks/3-quality_attributes/1-Observability.ipynb
@@ -52,10 +52,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "d1ccdace",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "✅ Successfully created AIProjectClient!\n"
+          ]
+        }
+      ],
       "source": [
         "import os\n",
         "import sys\n",
@@ -97,10 +105,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "d7fcdaba",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "💡Response:\n",
+            "There are **5,280 feet** in a mile.\n",
+            "\n",
+            "Finish reason: CompletionsFinishReason.STOPPED\n"
+          ]
+        }
+      ],
       "source": [
         "try:\n",
         "    # Create a ChatCompletions client\n",
@@ -675,16 +695,21 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": ".venv",
+      "display_name": "fdry_venv",
       "language": "python",
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
       "file_extension": ".py",
       "mimetype": "text/x-python",
       "name": "python",
       "nbconvert_exporter": "python",
-      "version": "3.11.11"
+      "pygments_lexer": "ipython3",
+      "version": "3.10.8"
     },
     "name": "Observability_and_Tracing_Comprehensive"
   },
